src/objects/LeanData__Log__c.object
<CustomObject>
    <description>This is a generic template for Custom Object.  With this template, you may adjust the default elements and values and add new elements and values.</description>
    <fields>
        <fullName>LeanData__Account_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Account_Match_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Match Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Logs</relationshipLabel>
        <relationshipName>Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Assignment_Routing_Action__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Assignment Routing Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Contact_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Contact</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Logs</relationshipLabel>
        <relationshipName>Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Converted_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Converted Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Converted Contact Logs</relationshipLabel>
        <relationshipName>ConvertedContactLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Converting_Action__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Converting Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Created_Order__c</fullName>
        <label>Created Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Is_Converting_Action__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Converting Action</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeanData__Is_Counted__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Is Counted</label>
        <precision>1</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Is_Merge_Action__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Merge Action</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeanData__Is_Routing_Action__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Routing Action</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeanData__Is_Tagging_Action__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Tagging Action</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeanData__Job_Id__c</fullName>
        <label>Job Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__L2aRouting_Error__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>L2aRouting Error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__LeadConverter_Error__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>LeadConverter Error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Lead_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Lead</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Lead_Match_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Lead Match Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Logs</relationshipLabel>
        <relationshipName>Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Matched_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Matched Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LeanData__Matching_Time__c</fullName>
        <label>Matching Time</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Message_2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LeanData__Message_3__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LeanData__Message_4__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LeanData__Message__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LeanData__Opportunity_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Opportunity</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Opportunity_Match_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Opportunity Match Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Logs</relationshipLabel>
        <relationshipName>Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Parent_Log__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Log</label>
        <referenceTo>LeanData__Log__c</referenceTo>
        <relationshipLabel>Parent Log</relationshipLabel>
        <relationshipName>Parent_Log</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Path_Node_0__c</fullName>
        <label>Path Node 0</label>
        <precision>10</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Path_Node_100__c</fullName>
        <label>Path Node 100</label>
        <precision>10</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Path_Node_101__c</fullName>
        <label>Path Node 101</label>
        <precision>10</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Post_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Post Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>PostOwnerLogs</relationshipLabel>
        <relationshipName>PostOwnerLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Post_Queue_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Post Queue Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Post_Queue_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Post Queue Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Pre_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pre Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>PreOwnerLogs</relationshipLabel>
        <relationshipName>PreOwnerLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Pre_Queue_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Pre Queue Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Pre_Queue_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Pre Queue Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Processed_At__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Processed At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LeanData__Processing_Time__c</fullName>
        <label>Total Processing Time</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Round_Robin_Pool__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Round Robin Pool</label>
        <referenceTo>LeanData__Round_Robin_Pool__c</referenceTo>
        <relationshipLabel>PostOwnerLogs</relationshipLabel>
        <relationshipName>PostOwnerLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Routing_Action_Picklist__c</fullName>
        <label>Routing Action</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>converted</fullName>
                </value>
                <value>
                    <fullName>converted - new account</fullName>
                </value>
                <value>
                    <fullName>new account</fullName>
                </value>
                <value>
                    <fullName>routed - account</fullName>
                </value>
                <value>
                    <fullName>routed - opportunity</fullName>
                </value>
                <value>
                    <fullName>routed - lead</fullName>
                </value>
                <value>
                    <fullName>routed - round robin</fullName>
                </value>
                <value>
                    <fullName>routed - territory</fullName>
                </value>
                <value>
                    <fullName>routed - assignment rule</fullName>
                </value>
                <value>
                    <fullName>routed - owner assignment</fullName>
                </value>
                <value>
                    <fullName>assigned - account</fullName>
                </value>
                <value>
                    <fullName>assigned - opportunity</fullName>
                </value>
                <value>
                    <fullName>assigned - lead</fullName>
                </value>
                <value>
                    <fullName>assigned - round robin</fullName>
                </value>
                <value>
                    <fullName>assigned - territory</fullName>
                </value>
                <value>
                    <fullName>assigned - owner assignment</fullName>
                </value>
                <value>
                    <fullName>merged</fullName>
                </value>
                <value>
                    <fullName>convert error</fullName>
                </value>
                <value>
                    <fullName>merge error</fullName>
                </value>
                <value>
                    <fullName>update error</fullName>
                </value>
                <value>
                    <fullName>fallback</fullName>
                </value>
                <value>
                    <fullName>live routing - routed</fullName>
                </value>
                <value>
                    <fullName>live routing - assigned</fullName>
                </value>
                <value>
                    <fullName>live routing - no action</fullName>
                </value>
                <value>
                    <fullName>live routing - error</fullName>
                </value>
                <value>
                    <fullName>new task</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LeanData__Routing_Action__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Routing Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Routing_Deployment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Routing Deployment</label>
        <referenceTo>LeanData__Routing_Deployment__c</referenceTo>
        <relationshipLabel>Logs</relationshipLabel>
        <relationshipName>Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Routing_Time__c</fullName>
        <label>Routing Time</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__SObject_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SObject Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Status__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Status</label>
        <precision>1</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Tagging_Action__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Tagging Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Triggering_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Triggering Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Logs From Account Update</relationshipLabel>
        <relationshipName>Logs_From_Account_Update</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Triggering_Action__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Triggering Action</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Type__c</fullName>
        <label>Type</label>
        <precision>1</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Update_Time__c</fullName>
        <label>Update Time</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Updated_Fields__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Updated Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LeanData__Youngest_Child__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Youngest Child</label>
        <referenceTo>LeanData__Log__c</referenceTo>
        <relationshipLabel>Youngest Child Log</relationshipLabel>
        <relationshipName>Youngest_Child_Log</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Log</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Custom Object Label Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>